--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            overflow: hidden;
+            // overflow: hidden; // 移除此行
         }
         .container {
             text-align: center;
@@ -177,7 +177,7 @@
         function createFloatingHearts() {
             const container = document.querySelector('.floating-hearts');
             const heartSymbols = ['❤️', '💖', '💗', '💓', '💘'];
-            for (let i = 0; i < 10; i++) { // 减少浮动心形的数量
+            for (let i = 0; i < 5; i++) { // 减少浮动心形的数量
                 const heart = document.createElement('div');
                 heart.className = 'floating-heart';
                 heart.textContent = heartSymbols[Math.floor(Math.random() * heartSymbols.length)];
@@ -234,7 +234,7 @@
         });
 
         // 创建星空效果
-        for (let i = 0; i < 50; i++) { // 减少星星的数量
+        for (let i = 0; i < 20; i++) { // 减少星星的数量
             let star = document.createElement('div');
             star.className = 'stars';
             star.style.left = `${Math.random() * 100}%`;
